[tapocontrol] copied 4.0 snapshot because 4.1 maven error
Signed-off-by: Christian Wild <christian@wildclan.de>